Web App connected with SQL databse

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AuthenticatorContext": "Server=(localdb)\\mssqllocaldb;Database=AuthenticatorContext-82810a6b-be40-469e-87f4-9c7d0f4b4702;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
